- Update Docker scripts to support CockroachDB
- Update CockroackDB load-db script to be single stream and have an adjustable
  rate on how many warehouses to load before committing
- Add separate YugabyteDB load-db script to be single stream and have an
  adjustable rate on how many warehouses to load before committing
- Update Docker scripts to support YugabyteDB

v0.48.1

- Update PostgreSQL report script
- Update Docker helper scripts to use Makefile.cmake
- Update run-workload with -F flag to control number of database connections
  per processor for driver3
- Update post-process script to take a list of mix files to process
- Use dbttools generic transaction rate plotting script
- Check for rst2html5 in additional to rst2html5.py
- Switch distro used in Dockerfile from Rocky to Debian

v0.48.0

- Clean up CPack rules
- Fix logic issue when starting PostgreSQL database after initialization
- Replace HTML generated with reStructuredText, which can be converted to HTML
  and PDF, or other formats.
- Fix how OS information is saved
- Add per process statistics to report
- Generate flame graphs for report
- Add undocumented support for driver3 in run-workload and reporting scripts
- Reorganize where data is saved when using run-workload script
- Move database system specific reporting into database specific reporting
  script
- Rename helper Makefile to Makefile.cmake

v0.47.0

- Add experimental multi-process driver2 that uses event callbacks (libev)
- Add new standalone driver (driver3) combining event callbacks with
  multi-process parallelism model, replacing previous thread based standalone
  driver
- Parallelize PostgreSQL vacuuming when building the database
- pgsql: Disable autovacuum on a table while it is being loaded

v0.46.2

- Fix post-process script to ignore transaction errors in statistical
  calculations

v0.46.1

- Fix data generator quoting bug introduced in v0.46.0
- Clean up client usage message with additions in v0.46.0