@@ -8,6 +8,7 @@ vX.Y.Z
 - Add separate YugabyteDB load-db script to be single stream and have an
   adjustable rate on how many warehouses to load before committing
 - Update Docker scripts to support YugabyteDB
+- Fix libpq debug printing of time stamps
 
 v0.48.1
 
